Simplify and make consistent flatten and expand operators.
Signed-off-by: currantw <taylor.curran@improving.com>